add domain category
