# internal/server/http/server.go
@@ -11,8 +11,9 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 
 	authHttp "gohub/domains/auth/port/http"
-	reviewHttp "gohub/domains/reviews/port/http"
+	categoryHttp "gohub/domains/categories/port/http"
 	conversationHttp "gohub/domains/conversations/port/http"
+	reviewHttp "gohub/domains/reviews/port/http"
 	userHttp "gohub/domains/users/port/http"
 
 	"github.com/QuocAnh189/GoBin/logger"
@@ -75,5 +76,6 @@ func (s Server) MapRoutes() error {
 	userHttp.Routes(routes_v1, s.db, s.validator)
 	reviewHttp.Routes(routes_v1, s.db, s.validator)
 	conversationHttp.Routes(routes_v1, s.db, s.validator)
+	categoryHttp.Routes(routes_v1, s.db, s.validator)
 	return nil
 }
